--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@
             </h2>
             <br>
             <a href="registromedicos.html">
-                <img src="Imagenes/Medico.jpg" alt="Doctores">
+                <img src="https://cdn.pixabay.com/photo/2013/02/24/01/17/surgery-85574__340.jpg" alt="Doctores">
             </a>
             <br>
             <a href="registromedicos.html" class="btn">
@@ -137,7 +137,7 @@
             </h2>
             <br>
             <a href="registropacientes.html">
-                <img src="Imagenes/Paciente.jpg" alt="Pacientes">
+                <img src="https://cdn.pixabay.com/photo/2021/06/05/22/46/woman-6313925__340.jpg" alt="Pacientes">
             </a>
             <br> 
             <a href="registropacientes.html" class="btn">
